I have added a comment to HTML File

--- a/menu-projects.html
+++ b/menu-projects.html
@@ -8,6 +8,7 @@
         <link href='menu-projects.css' rel='stylesheet'>
     </head>
 
+    <!-- Here you have to make changes, but I have no idea what kind of. Let's add new comment -->
     <body>
         <header>
             <nav class="nav">
